namespace GourmetOS.Models;

public class Ingrediente
{
    public required string Nombre { get; set; }
    public required string Descripcion { get; set; }
    public required int Numero { get; set; }
}