namespace GourmetOS.Models;

public class Persona
{
    public required String Nombre { get; set; }
    public required string Dni{ get; set; }
    public required string Ss{ get; set; }
    public int? Telefono { get; set; } 
    public int? Movil{ get; set; }
}