namespace GourmetOS.Models;

public enum TipoPlato
{
    Primero,
    Segundo,
    Postre
}