---
config:
  look: neo
  theme: neo-dark
---
classDiagram
direction TB
    class Persona {
	    +string nombre
	    +String dni
	    +string ss
	    +int Telefono
	    +int Movil
    }

    class Pinche {
	    +string nacimiento
	    +cocinero mentor
	    +retirar(Ingrediente)
    }

    class Chef {
	    +int experiencia
	    +List~Plato~ recetas
	    +cocinar(Plato)
    }

    class Almacen {
		+List~estante~ estante
		-ComprobarChef(Chef) :bool
		
    }

    class Estante {
	    +string letras
	    +string tamaño
	    +Ingrediente ingrediente
    }

    class Ingrediente {
	    +string nombre
	    +string descripcion
	    +int numero
    }

    class Plato {
	    +string nombre
	    +double precio
	    +enum categoria
	    +string ingrediente
    }

    class TipoPlato {
        entrante
	    primero
	    segundo
	    postre
    }

	<<enumeration>> TipoPlato
	

    Persona <|-- Pinche
    Persona <|-- Chef
    Chef "1" --* Pinche
    Almacen "1" --* "*" Estante
    Estante "1" --* "1" Ingrediente
    Plato "1" --o "*" Ingrediente
    TipoPlato "1" -- "1" Plato